# kid-mind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent_cli.py  chunk_kids_cli.py  docker-compose.yml  pyproject.toml  streamlit_app.py
.claude/skills/cloud-build/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/scripts/: review.py
.claude/skills/deploy/: SKILL.md
.claude/skills/kid-collector/: SKILL.md
.claude/skills/kid-collector/evals/: evals.json
.claude/skills/ssh/: SKILL.md
.claude/skills/streamlit-app/: SKILL.md
.streamlit/: config.toml
assets/: style.css
k8s/: namespace.yaml
k8s/chromadb/: configmap.yaml  service.yaml  statefulset.yaml
k8s/chunker/: configmap.yaml  job.yaml  secret.yaml
k8s/streamlit/: configmap.yaml  deployment.yaml  gateway.yaml  secret.yaml  service.yaml
scripts/: setup-vertex-ai-identity.sh  setup-workload-identity.sh  upload-kids-to-gcs.sh
src/kid_mind/: __init__.py  agent.py  agent_pydantic.py  config.py  parser.py  prompt.py  tools.py
tests/: conftest.py  generate_ground_truth.py  model_comparison.py  model_comparison_raw.json  model_comparison_report.md  test_chunk_pipeline.py  test_concurrent_sessions.py  test_section_splitting.py  test_tools.py
tests/fixtures/ground_truth/: ishares__GB00B08HD364.json  ishares__IE0030308773.json  spdr__IE000191HKF0.json  spdr__IE00059GZ051.json  vanguard__IE00004S2680.json  vanguard__IE0001RDRUG3.json  xtrackers__DE000A1E0HR8.json  xtrackers__DE000A1EK0G3.json  xtrackers__LU0779800910.json
(+14 files in other folders)
